Responsiveness for <768px devices

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,10 @@
             </div>
          </form>
       </main>
+
+      <hidden-icon name="star">
+         <img class="star" src="./assets/star.svg" alt="star" />
+      </hidden-icon>
    </body>
    <script type="module" src="./main.js"></script>
 </html>
