--- a/client/index.html
+++ b/client/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Quizo Html Template</title>
-      <link rel="stylesheet" href="styles/base.css" />
-   </head>
-   <body>
-      <aside class="sidebar">
-         <div class="logo">
-            <img
-               src="https://templates.seekviral.com/trimba3/forms/InterestingQuiz/assets/images/logo.png"
-               alt="Logo Icon"
-            />
-            <div class="logo-text">Trimba <span>.</span></div>
-         </div>
-
-         <div class="progress">
-            <span>0% complete</span>
-            <progress value="50" max="100"></progress>
-         </div>
-      </aside>
-
-      <main class="content">
-         <form>
-            <!-- Form content here. -->
-            <div class="form-content"></div>
-            <div class="button-container">
-               <button id="back-button" class="form-button" type="button">
-                  <span>Back</span>
-               </button>
-               <button id="continue-button" class="form-button" type="button">
-                  <span>Continue</span>
-               </button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Quizo Html Template</title>
+        <link rel="stylesheet" href="styles/base.css" />
+    </head>
+    <body>
+        <aside class="sidebar">
+            <div class="logo">
+                <img
+                    src="https://templates.seekviral.com/trimba3/forms/InterestingQuiz/assets/images/logo.png"
+                    alt="Logo Icon"
+                />
+                <div class="logo-text">Trimba <span>.</span></div>
             </div>
-         </form>
-      </main>
 
-      <hidden-icon name="star">
-         <img class="star" src="./assets/star.svg" alt="star" />
-      </hidden-icon>
-   </body>
-   <script type="module" src="./main.js"></script>
+            <div class="progress">
+                <span>0% complete</span>
+                <progress value="50" max="100"></progress>
+            </div>
+        </aside>
+
+        <main class="content">
+            <form>
+                <!-- Form content here. -->
+                <div class="form-content"></div>
+                <div class="button-container">
+                    <button id="back-button" class="form-button" type="button">
+                        <span>Back</span>
+                    </button>
+                    <button
+                        id="continue-button"
+                        class="form-button"
+                        type="button"
+                    >
+                        <span>Continue</span>
+                    </button>
+                </div>
+            </form>
+        </main>
+    </body>
+    <script type="module" src="./main.js"></script>
 </html>
