Fix Vite resolution error

--- a/client/src/questions.html
+++ b/client/src/questions.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quizo Html Template</title>
-        <link rel="stylesheet" href="./questions/style.css" />
+        <link rel="stylesheet" href="./styles/questions/base.css" />
     </head>
     <body>
         <main class="content">
@@ -31,5 +31,5 @@
             <progress value="50" max="100">hj</progress>
         </div>
     </body>
-    <script type="module" src="./questions/main.js"></script>
+    <script type="module" src="./questions.js"></script>
 </html>
