--- a/client/src/questions.html
+++ b/client/src/questions.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quizo Html Template</title>
-        <link rel="stylesheet" href="./styles/questions/base.css" />
+        <link rel="stylesheet" href="./styles/questions-page/base.css" />
     </head>
     <body>
         <main class="content">
