Fix build error

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -103,6 +103,6 @@
                 </button>
             </section>
         </main>
-        <script src="./index.js"></script>
+        <script type="module" src="./index.js"></script>
     </body>
 </html>
